# BotNet

./: .gitignore  BrowserRecovery.cs  Cargo.toml  ConsoleApp1.csproj  FileGrabber.cs  Program.cs  README.md  SysInfo.cs  Utils.cs  app.py  build.sh  builder.py  client.js  exe_to_embedded_loader  exe_to_embedded_loader.c  final_loader.c  gen_xor_advanced.py  gen_xor_more.py  http.js  loader.c  loader.cpp  loader_template.c  main.cpp  main.rs  obin_generator.py  packages.config  payload.c  pe_to_shellcode.c  pic_loader.c  sample_payload.c  stub.c  test_payload.c  tls.js  windows.h
.cargo/: config.toml
Properties/: AssemblyInfo.cs
anti-vm/: Cargo.toml
anti-vm/src/: anti-vm.rs
browserrecovery/src/: main.rs
c_client/: Makefile  README_C.md  build.bat
c_client/src/: browser.c  camera.c  main.c  rfe.c  screen.c  sysinfo.c  utils.c
chromelevator-injector/: Cargo.toml
chromelevator-injector/src/: lib.rs  main.rs
chromelevator-payload/: Cargo.toml
chromelevator-payload/src/: lib.rs
client/src/: sysinfo.rs
db/: users.json
implant/src/: lib.rs
injector/: Cargo.toml
injector/src/: bootstrapper.rs  main.rs
obfuscator/: Cargo.toml
obfuscator/src/: codec.rs  key_obfuscation.rs  lib.rs
obfuscator/srcs/: key_management.rs  lib.rs
obfuscator/tests/: integration_test.rs
pic_loader/: README.md  linker.ld  loader  loader.c  payload  payload.b64  payload_src.c  runner  runner.c
reflective_dll/: Cargo.toml
reflective_dll/src/: lib.rs
scripts/: obin_generator.py
src/: file_operations.rs  filecopy.rs  lib.rs  lnkspawner.rs  main.rs  persistence.rs  syscalls.rs  taskspawner.rs  utils.rs
stubs/1/ps/: ps1.ps1
templates/packer/src/: main.rs
