[package]
name = "echo-test-lnk"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_IO",
] }
