[package]
name = "chromelevator-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_IO"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_bytes_aligned = "0.1.1"
goblin = "0.8.2"
hex = "0.4.3"
