[package]
name = "chromelevator-payload"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_Security_Cryptography",
    "Win32_System_IO"
] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
uuid = { version = "1.8", features = ["v4"] }
hex = "0.4.3"
